--- a/templates/AddPlantPage.html
+++ b/templates/AddPlantPage.html
@@ -2,6 +2,7 @@
 
 {% block javascript_1 %}
 <script src="/static/javascript/html-requests.js" type="text/javascript"></script>
+<script src="/static/javascript/form-handler.js" type="text/javascript"></script>
 <script src="/static/javascript/add-a-plant.js" type="text/javascript"></script>
 {% endblock %}
 
@@ -13,16 +14,16 @@
     <input type="text" id="name" onkeypress="handleUserFormInput(this.id, this.value)" value="" autofocus />
   </span>
   <br /><br />
-  <!--<span>
-    <label for="photo">Photo:</label>
-    <br />
-    <input type="file" id="photo" />
-  </span>
-  <br /><br />-->
   <span>
     <label for="variety">Variety:</label>
     <br />
     <input type="text" id="variety" onkeypress="handleUserFormInput(this.id, this.value)" value="" />
+  </span>
+  <br /><br />
+  <span>
+    <label for="photo">Photo:</label>
+    <br />
+    <input type="file" id="photo" />
   </span>
   <br /><br />
   <input type="button" onclick="submitForm()" value="Submit" />
