--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,6 +1,143 @@
 body {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   margin: 0px;
   padding: 0px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  color: #000000;
+  background-color: #F6F6F6;
+}
+
+.form-item-container {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  padding-bottom: 10px;
+}
+
+.form-item-left-side {
+  display: flex;
+  flex-direction: row-reverse;
+  height: 100%;
+  width: 50%;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.form-item-right-side {
+  display: flex;
+  flex-direction: row;
+  height: 31px;
+  text-align: center;
+  width: 50%;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.form-submit-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+  height: 31px;
+  padding-bottom: 10px;
+}
+
+input[type="button"] {
+  border-radius: 5px;
+}
+
+input[type="file"] {
+  line-height: 31px;
+  font-size: 16px;
+  cursor: pointer;
+  outline: none;
+}
+
+input[type="text"] {
+  font-size: 18px;
+  height: 25px;
+  width: 250px;
+  border-radius: 5px;
+  text-indent: 5px;
+  outline: none;
+}
+
+label {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  height: 100%;
+  font-size: 18px;
+  font-weight: 700;
+  text-align: center;
+}
+
+.page-heading-divider-inner {
+  display: flex;
+  justify-content: center;
+  width: 600px;
+  height: 19px;
+  min-height: 19px;
+  max-height: 19px;
+  border-style: dotted;
+  border-width: 1px;
+  border-color: #000000;
+  border-left: none;
+  border-right: none;
+  border-bottom: none;
+}
+
+.page-heading-divider-outer {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.page-heading-text-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  width: 100%;
+  max-width: 1349px;
+  min-width: 683px;
+  user-select: none;
+}
+
+.page-heading-text-content {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding-bottom: 10px;
+  font-weight: 750;
+}
+
+.region-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.region-outer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  max-width: 1329px;
+  min-width: 683px;
+  padding-top: 25px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 25px;
+}
+
+.width-full-screen {
+  width: 100%;
+  max-width: 1903px;
+  min-width: 720px;
 }
