--- a/templates/HomePage.html
+++ b/templates/HomePage.html
@@ -1,6 +1,13 @@
 {% extends "TemplateAllPages.html" %}
 
 {% block body_content %}
-<h1>Home Page</h1>
+<div class="page-heading-text-container">
+  <h1 class="page-heading-text-content">
+    Home Page
+  </h1>
+  <div role="presentation" class="page-heading-divider-outer">
+    <div class="page-heading-divider-inner"></div>
+  </div>
+</div>
 <p>This is the home page content</p>
 {% endblock %}
