--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -10,6 +10,52 @@ body {
   background-color: #F6F6F6;
 }
 
+.dropdown-menu-container {
+  display: flex;
+  position: absolute;
+  flex-direction: column;
+  overflow: hidden;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #FFFFFF;
+  border-left: none;
+  border-right: none;
+  border-bottom: none;
+  background-color: #757575;
+  opacity: 0;
+  transition: none;
+}
+
+.dropdown-menu-item {
+  display: flex;
+  align-items: center;
+  color: #FFFFFF;
+  padding: 5px;
+  font-family: inherit;
+  font-size: inherit;
+  height: 30px;
+  border-width: 1px;
+  border-style: solid;
+  border-left: none;
+  border-right: none;
+  border-top: none;
+  border-color: #FFFFFF;
+  white-space: nowrap;
+  text-decoration: none;
+  outline: none;
+  background-color: #757575;
+  transition: none;
+}
+
+.dropdown-menu-item:hover {
+  background: #939393;
+  transition: all 0.3s ease-in-out 0s;
+}
+
+.dropdown-menu-item:visited {
+  color: #FFFFFF;
+}
+
 .form-item-container {
   display: flex;
   flex-direction: row;
@@ -75,6 +121,73 @@ label {
   text-align: center;
 }
 
+.menu-bar-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  height: 55px;
+  min-height: 55px;
+  max-height: 55px;
+  width: 100%;
+  max-width: 1903px;
+  min-width: 703px;
+  font-size: 18px;
+  background-color: #757575;
+}
+
+.menu-bar-inner {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  width: 100%;
+  max-width: 1349px;
+  min-width: 683px;
+  font-weight: 600;
+}
+
+.menu-bar-item-content {
+  display: flex;
+  align-items: center;
+  height: inherit;
+  width: inherit;
+  text-decoration: none;
+  font-family: inherit;
+  font-size: inherit;
+  color: inherit;
+  cursor: pointer;
+}
+
+.menu-bar-item-single {
+  display: flex;
+  text-align: center;
+  white-space: nowrap;
+  height: 55px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-left: 7.5px;
+  margin-right: 7.5px;
+  user-select: none;
+  background: transparent;
+  transition: none;
+  color: #FFFFFF;
+}
+
+.menu-bar-item-single:hover {
+  background: #939393;
+  transition: all 0.3s ease-in-out 0s;
+}
+
+.menu-bar-outer {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  width: auto;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
 .page-heading-divider-inner {
   display: flex;
   justify-content: center;
@@ -134,6 +247,40 @@ label {
   padding-left: 10px;
   padding-right: 10px;
   padding-bottom: 25px;
+}
+
+.small-menu-icon-container {
+  display: flex;
+  flex-direction: column;
+  width: 10px;
+  height: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
+}
+
+.small-menu-icon-lower {
+  width: 10px;
+  height: 2px;
+  background-color: #FFFFFF;
+}
+
+.small-menu-icon-upper {
+  width: 10px;
+  height: 2px; 
+  margin-bottom: 2px;
+  background-color: #FFFFFF;
+}
+
+.small-right-arrow-icon-container {
+  display: flex;
+  height: 5px;
+  width: 5px;
+  border-color: #ffffff;
+  border-style: solid;
+  border-width: 2px;
+  border-top: none;
+  border-left: none;
+  transform: rotate(-45deg);
 }
 
 .width-full-screen {
