add menu bar with menu items for navigation

--- a/templates/AddAPlantPage.html
+++ b/templates/AddAPlantPage.html
@@ -33,7 +33,7 @@
 </div>
 <div class="form-item-container">
   <div class="form-item-left-side">
-    <label for="photo">Photo:</label>
+    <label for="photo">Picture:</label>
   </div>
   <div class="form-item-right-side">
     <input type="file" id="photo" />
