add spacing around the save button text

--- a/templates/AddAPlantPage.html
+++ b/templates/AddAPlantPage.html
@@ -20,7 +20,7 @@
     <label for="name">Name:</label>
   </div>
   <div class="form-item-right-side">
-    <input type="text" id="name" onkeypress="handleUserFormInput(this.id, this.value)" value="" autofocus />
+    <input type="text" id="name" onkeypress="handleUserFormInput(this.id, this.value);" value="" autofocus />
   </div>
 </div>
 <div class="form-item-container">
@@ -28,7 +28,7 @@
     <label for="variety">Variety:</label>
   </div>
   <div class="form-item-right-side">
-    <input type="text" id="variety" onkeypress="handleUserFormInput(this.id, this.value)" value="" />
+    <input type="text" id="variety" onkeypress="handleUserFormInput(this.id, this.value);" value="" />
   </div>
 </div>
 <div class="form-item-container">
@@ -40,7 +40,7 @@
   </div>
 </div>
 <div class="form-submit-container">
-  <input type="button" onclick="submitForm()" value="Submit" />
+  <input type="button" onclick="submitForm();" value="&nbsp;&nbsp;Save&nbsp;&nbsp;" />
 </div>
 <!--
   OK Name
