--- a/templates/TemplateAllPages.html
+++ b/templates/TemplateAllPages.html
@@ -6,6 +6,7 @@
     {% block javascript_1 %}
     {% endblock %}
     <link rel="stylesheet" href="/static/css/styles.css">
+    <link rel="shortcut icon" href="/static/favicon.ico">
   </head>
   <body class="width-full-screen">
     <div role="navigation" id="menu-bar" class="menu-bar-container">
